// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer: chained select 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          带搜索
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-clickable is-group"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                        >
                          请选择
                        </span>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select associated 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="b"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          关联选择模式
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-clickable"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                        >
                          请选择
                        </span>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select associated mode with virtual 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  级联
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-opened is-clickable"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                >
                  请选择
                </span>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                >
                  <icon-mock
                    class="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select chained 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          级联选择
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-clickable"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                        >
                          请选择
                        </span>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select chained mode with virtual 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  级联
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-opened is-clickable"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                >
                  请选择
                </span>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                >
                  <icon-mock
                    class="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select group 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          分组
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-clickable"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                        >
                          请选择
                        </span>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select group mode with virtual 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  分组
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-opened is-clickable"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                >
                  请选择
                </span>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                >
                  <icon-mock
                    class="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select menutpl 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="select"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          选项
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select"
                      role="combobox"
                      tabindex="0"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-valueWrap"
                      >
                        <div
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-placeholder"
                        >
                          请选择
                        </div>
                      </div>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-arrow"
                      >
                        <icon-mock
                          class="icon icon-right-arrow-bold"
                          icon="right-arrow-bold"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          表格形式
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-clickable"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                        >
                          请选择
                        </span>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table mode with virtual 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  表格
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-opened is-clickable"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                >
                  请选择
                </span>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                >
                  <icon-mock
                    class="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table with labelField & valueField 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="a"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  表格形式
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-opened is-clickable is-group"
              tabindex="-1"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                    data-index="0"
                  >
                    诸葛亮
                  </span>
                  <a
                    data-index="0"
                  >
                    <icon-mock
                      class="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value"
                >
                  <span
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-valueLabel"
                    data-index="1"
                  >
                    李白
                  </span>
                  <a
                    data-index="1"
                  >
                    <icon-mock
                      class="icon icon-close"
                      icon="close"
                    />
                  </a>
                </div>
              </div>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                >
                  <icon-mock
                    class="icon icon-right-arrow-bold"
                    icon="right-arrow-bold"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            Submit
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select table with labelField & valueField 2`] = `
{
  "a": "zhugeliang,libai",
}
`;

exports[`Renderer:select tree 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page"
    data-prismui-theme="cxd"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-content"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-main"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Page-body"
          role="page-body"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
            data-role="container"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
            >
              <h3
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
              >
                <span
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                >
                  <span>
                    表单
                  </span>
                </span>
              </h3>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
            >
              <form
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
                novalidate=""
              >
                <input
                  style="display: none;"
                  type="submit"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
                  data-amis-name="a"
                  data-role="form-item"
                >
                  <label
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
                  >
                    <span>
                      <span
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
                      >
                        <span>
                          树型展示
                        </span>
                      </span>
                    </span>
                  </label>
                  <div
                    class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
                  >
                    <div
                      class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox __PRISMUI_COMPONENT_CLASS_PREFIX__TransferDropDown __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-clickable"
                      tabindex="-1"
                    >
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-value-wrap"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-placeholder"
                        >
                          请选择
                        </span>
                      </div>
                      <div
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-actions"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ResultBox-pc-arrow"
                        >
                          <icon-mock
                            class="icon icon-right-arrow-bold"
                            icon="right-arrow-bold"
                          />
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
              >
                <button
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
                  type="submit"
                >
                  <span>
                    提交
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Renderer:select virtual 1`] = `
<div>
  <div
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--default __PRISMUI_COMPONENT_CLASS_PREFIX__Panel--form"
    data-role="container"
  >
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-heading"
    >
      <h3
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-title"
      >
        <span
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
        >
          <span>
            表单
          </span>
        </span>
      </h3>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-body"
    >
      <form
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
        novalidate=""
      >
        <input
          style="display: none;"
          type="submit"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
          data-amis-name="select"
          data-role="form-item"
        >
          <label
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label"
          >
            <span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
              >
                <span>
                  选项
                </span>
              </span>
            </span>
          </label>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__SelectControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="downshift-1-menu"
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select is-opened has-popover"
              role="combobox"
              tabindex="0"
            >
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-valueWrap"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-placeholder"
                >
                  请选择
                </div>
              </div>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-arrow"
              >
                <icon-mock
                  class="icon icon-right-arrow-bold"
                  icon="right-arrow-bold"
                />
              </span>
              <div
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver __PRISMUI_COMPONENT_CLASS_PREFIX__Select-popover"
                data-prismui-theme="cxd"
                role="popover"
                style="display: block; width: 0px; left: 0px; top: 0px; visibility: hidden;"
                theme="cxd"
              >
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__PopOver-overlay"
                />
                <div
                  class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-menu __PRISMUI_COMPONENT_CLASS_PREFIX__Select--longlist"
                >
                  <div
                    style="overflow: auto; will-change: transform; height: 266px; width: 100%;"
                  >
                    <div
                      style="position: relative; width: auto; white-space: nowrap; min-height: 100%; height: 6400px;"
                    >
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-0"
                        role="option"
                        style="position: absolute; top: 0px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option0"
                        >
                          option0
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-1"
                        role="option"
                        style="position: absolute; top: 32px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option1"
                        >
                          option1
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-2"
                        role="option"
                        style="position: absolute; top: 64px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option2"
                        >
                          option2
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-3"
                        role="option"
                        style="position: absolute; top: 96px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option3"
                        >
                          option3
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-4"
                        role="option"
                        style="position: absolute; top: 128px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option4"
                        >
                          option4
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-5"
                        role="option"
                        style="position: absolute; top: 160px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option5"
                        >
                          option5
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-6"
                        role="option"
                        style="position: absolute; top: 192px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option6"
                        >
                          option6
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-7"
                        role="option"
                        style="position: absolute; top: 224px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option7"
                        >
                          option7
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-8"
                        role="option"
                        style="position: absolute; top: 256px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option8"
                        >
                          option8
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-9"
                        role="option"
                        style="position: absolute; top: 288px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option9"
                        >
                          option9
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-10"
                        role="option"
                        style="position: absolute; top: 320px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option10"
                        >
                          option10
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option"
                        id="downshift-1-item-11"
                        role="option"
                        style="position: absolute; top: 352px; left: 0px; width: 100%; height: 32px;"
                      >
                        <span
                          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Select-option-content"
                          title="option11"
                        >
                          option11
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footerWrap"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Panel-btnToolbar __PRISMUI_COMPONENT_CLASS_PREFIX__Panel-footer"
      >
        <button
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Button __PRISMUI_COMPONENT_CLASS_PREFIX__Button--primary __PRISMUI_COMPONENT_CLASS_PREFIX__Button--size-default"
          type="submit"
        >
          <span>
            提交
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
